argo-rollouts/be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end-service-active
  namespace: pharmacy-app
spec:
  selector:
    component: back-end
  ports:
  - name: http-be
    protocol: TCP
    port: 8080
    targetPort: http-backend

---
apiVersion: v1
kind: Service
metadata:
  name: back-end-service-preview
  namespace: pharmacy-app
spec:
  selector:
    component: back-end
  ports:
  - name: http-be
    protocol: TCP
    port: 8080
    targetPort: http-backend
