argo-rollouts/fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service-active
  namespace: pharmacy-app
spec:
  selector:
    component: front-end
  ports:
  - name: http-fe
    protocol: TCP
    port: 80
    targetPort: http-frontend

---
apiVersion: v1
kind: Service
metadata:
  name: front-end-service-preview
  namespace: pharmacy-app
spec:
  selector:
    component: front-end
  ports:
  - name: http-fe
    protocol: TCP
    port: 80
    targetPort: http-frontend
