argo-rollouts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pharmacy-active
  namespace: pharmacy-app
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - demo.datlaid.com
    secretName: pharmacy-app-active
  rules:
  - host: demo.datlaid.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-service-active
            port:
              name: http-fe
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: back-end-service-active
            port:
              name: http-be
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pharmacy-preview
  namespace: pharmacy-app
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - preview.demo.datlaid.com
    secretName: pharmacy-app-preview
  rules:
  - host: preview.demo.datlaid.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-service-preview
            port:
              name: http-fe
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: back-end-service-preview
            port:
              name: http-be
